2005-09-18  Chong Yidong  <cyd@stupidchicken.com>

	* image.el (image-load-path): Use symbol `data-directory' instead
	of its value, for backward compatibility with packages that bind
	it during `find-image'.  Suggested by Katsumi Yamaoka.
	(image-search-load-path): Handle symbols whose values are strings.

2005-09-18  Romain Francoise  <romain@orebokech.com>

	* calendar/diary-lib.el (mark-diary-entries): Rearrange to wrap
	with-current-buffer form in save-excursion.

2005-09-18  D Goel  <deego@gnufans.org>

	* apropos.el (apropos-command): Fix `message' call: first arg
	should be a format spec. In this and all other cases that appear
	below and elsewhere in the source code, I made a change only when
	two conditions were satisfied: [1] I can think of a possibility
	that the arguments would cause an error, for example, the code is
	question relies on extarnal variables such as filenames. [2] I was
	sure that the arg to `message' could not have been nil in the
	code.

	* textmodes/tildify.el (tildify-region): Ditto.

	* textmodes/reftex-index.el (reftex-index-change-entry)
	(reftex-index-phrase-selection-or-word)
	(reftex-query-index-phrase): Ditto.

	* textmodes/reftex-dcr.el (reftex-echo-ref, reftex-echo-cite): Ditto.

	* textmodes/org.el (org-complete, org-deadline, org-schedule)
	(org-priority, org-table-sum): Ditto.

	* textmodes/ispell.el (ispell-check-version)
	(ispell-parse-output): Ditto.

	* textmodes/flyspell.el (flyspell-mode-on)
	(flyspell-notify-misspell, flyspell-word)
	(flyspell-display-next-corrections): Ditto.

	* textmodes/bibtex.el (bibtex-print-help-message): Ditto.

	* textmodes/artist.el (artist-key-set-point-poly): Ditto.

	* term/mac-win.el (mac-services-insert-text): Ditto.

	* progmodes/vhdl-mode.el (vhdl-warning, vhdl-print-warnings)
	(vhdl-hooked-abbrev, vhdl-template-insert-fun)
	(vhdl-port-paste-testbench, vhdl-compose-new-component)
	(vhdl-compose-configuration): Ditto.

	* progmodes/sh-script.el (sh-blink, sh-show-indent)